# pkrr

./: .gitignore  README.md  debug_parser.py  main.py  minimal_test.py  pyproject.toml  standalone_test.py  test_for_loops.py  test_simple.py
.github/workflows/: publish.yml
compiler/: __init__.py  ast.py  lexer.py  main.py  parser.py  transpiler.py
compiler/tests/: test_parser.py
examples/: advanced_faker.rpx  comprehensive_demo.rpx  dummy_data.rpx  enhanced_simple.rpx  faker_demo.rpx  hello.rpx  loops_demo.rpx  realistic_demo.rpx  simple_loop.rpx  test_new_features.rpx
output/: README.md  debug_types.py  manual_test.py  setup.py  test_complex_loops.py  test_examples.py
output/output/: README.md  setup.py
output/output/simple_loops/: NAMESPACE  core.py
output/output/simple_loops/R/: simple_loops.R
output/simple_loops/: DESCRIPTION  __init__.py
output/test_loops/: DESCRIPTION  NAMESPACE  __init__.py  core.py
output/test_loops/R/: test_loops.R
pkrr/: cli.py
pkrr/core/: manifest.py  versioning.py
pkrr/plugins/: __init__.py  base.py  python.py  r.py
pkrr/templates/python/minimal/: README.md.j2
pkrr/templates/python/minimal/docs/: index.md.j2
pkrr/templates/python/minimal/tests/: conftest.py.j2  test_core.py.j2
pkrr/templates/r/minimal/: DESCRIPTION.j2  README.md.j2
rpx/: cli.py
rpx/core/: manifest.py  templates.py
rpx/plugins/: python.py  r.py
rpx/templates/python/minimal/: README.md.j2  mkdocs.yml.j2  pyproject.toml.j2
rpx/templates/python/minimal/docs/: index.md.j2
rpx/templates/r/minimal/: .Rbuildignore  README.md.j2
rpx/templates/r/minimal/R/: hello.R.j2
rpx/templates/r/minimal/tests/: testthat.R
rpx/templates/r/minimal/tests/testthat/: test-hello.R.j2
tests/: test_versioning.py
