[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rpx"
version = "0.1.0"
description = "Unified CLI to scaffold, build, test, lint, and document Python and R packages"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "RPX Maintainers", email = "dev@example.com" }
]
keywords = ["packaging", "python", "r", "cli", "scaffold"]
dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0",
  "Jinja2>=3.1.0"
]

[project.scripts]
rpx = "rpx.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["rpx"]
include = [
  "rpx/templates/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "rpx/**",
  "README.md",
]
