[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkrr"
version = "0.1.0"
description = "Unified CLI to scaffold, build, test, lint, and document Python and R packages"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Pkrr Maintainers" }
]
keywords = ["packaging", "python", "r", "cli", "scaffold"]
dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0",
  "Jinja2>=3.1.0"
]

[project.urls]
Repository = "https://github.com/nortelabs/pkrr"
Issues = "https://github.com/nortelabs/pkrr/issues"

[project.scripts]
pkrr = "pkrr.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pkrr"]
include = [
  "pkrr/templates/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "pkrr/**",
  "README.md",
]
