[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pkrr"
version = "1.0.0"
description = "Unified CLI to scaffold, build, test, lint, and document Python and R packages"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Pkrr Maintainers" }
]
keywords = ["packaging", "python", "r", "cli", "scaffold"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.9.0",
  "pydantic>=2.5.0",
  "PyYAML>=6.0",
  "Jinja2>=3.1.0"
]

[project.urls]
Repository = "https://github.com/nortelabs/pkrr"
Issues = "https://github.com/nortelabs/pkrr/issues"

[project.scripts]
pkrr = "pkrr.cli:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["pkrr"]
include = [
  "pkrr/templates/**",
]

[tool.hatch.build.targets.sdist]
include = [
  "pkrr/**",
  "README.md",
]
